--- a/test_data/sequence.yaml
+++ b/test_data/sequence.yaml
@@ -11,5 +11,5 @@ name: vector4
 aliases: [VECTOR]
 type: sequence
 description: vector with 4 elements
-element_type: int32
+element_data_type: int32
 number_of_elements: 4
