--- a/test_data/structure_with_stream.yaml
+++ b/test_data/structure_with_stream.yaml
@@ -14,6 +14,8 @@ attributes:
 ---
 name: extension_block
 type: structure
+attributes:
+  byte_order: little-endian
 members:
 - name: size
   data_type: uint32
