--- a/test_data/sequence_with_structure.yaml
+++ b/test_data/sequence_with_structure.yaml
@@ -14,7 +14,7 @@ attributes:
 members:
 - name: number_of_elements
   data_type: int32
-- name: valuse
+- name: values
   type: sequence
   element_data_type: int32
   number_of_elements: vector.number_of_elements
